--- a/tbsd.html
+++ b/tbsd.html
@@ -210,7 +210,7 @@
          <div class="progress-container">
              <div class="progress-bar"></div>
          </div>
-         <div class="status">修复进度: 80% - 预计完成时间: 1小时后</div>
+         <div class="status">正在维修中</div>
          
          <button class="glitch-btn" onclick="window.location.href='/'">返回首页</button>
      </div>
