--- a/tbs.html
+++ b/tbs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>图包商店 - 优化版</title>
+  <title>图包商店</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
   <style>
     /* 省略原有样式以节省空间，只添加修改和新增部分 */
